<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/camera_popup_btn_takecamera"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true"
                   android:background="@drawable/select_item_nobord_bg"
                android:text="@string/take_camera"
                android:textColor="@color/text_name_color"
                android:textSize="@dimen/text_size_more" />

          <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cdcdcd"
            />
            <Button
                android:id="@+id/camera_popup_btn_selectimg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
             
                android:clickable="true"
                android:text="@string/select_img"
                   android:background="@drawable/select_item_nobord_bg"
                android:textColor="@color/text_name_color"
                android:textSize="@dimen/text_size_more" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cdcdcd"
            />

        <Button
            android:id="@+id/camera_popup_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
               android:background="@drawable/select_item_nobord_bg"
            android:text="@string/cancel"
            android:textColor="@color/text_name_color"
            android:textSize="@dimen/text_size_more" />
    </LinearLayout>

</LinearLayout>