<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/soft_update_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_22" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/color_f1" />


    <TextView
        android:id="@+id/tv_mess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="版本更新"
        android:layout_marginTop="@dimen/panding_10"
        android:layout_marginBottom="@dimen/panding_10"
         />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_f1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/bnt_quxiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/soft_update_later"
            android:textColor="@color/tab_text"
            android:textSize="@dimen/text_16" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/color_f1" />

        <Button
            android:id="@+id/bnt_quding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/soft_update_updatebtn"
            android:textColor="@color/tab_text"
            android:textSize="@dimen/text_16" />
    </LinearLayout>



</LinearLayout>